<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_title_text">Just empty boxes here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product to your inventory</string>
    <string name="empty_view_title_text_supplier">So lonely here...</string>
    <string name="empty_view_subtitle_text_supplier">Get started by adding a supplier to your database</string>
    <string name="unit_pc">pieces(s)</string>
    <string name="unit_kg">kilogram</string>
    <string name="unit_l">liter</string>
    <string name="pick_image_intent_text">Choose an app to use</string>
    <string name="no_description">no description available</string>
    <string name="action_save">Save</string>
    <string name="action_delete_product">Delete product</string>
    <string name="action_delete_supplier">Delete supplier</string>
    <string name="title_add_new_product">Add product</string>
    <string name="title_edit_product">Edit product</string>
    <string name="title_add_new_supplier">Add supplier</string>
    <string name="title_edit_supplier">Edit supplier</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_supplier_successful">Supplier saved</string>
    <string name="editor_insert_supplier_failed">Error with saving supplier</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_supplier_successful">Supplier updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_supplier_failed">Error with updating supplier</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="delete_supplier_dialog_msg">Are you sure you want to delete this supplier?</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all products?</string>
    <string name="delete_all_suppliers_dialog_msg">Are you sure you want to delete all suppliers?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_supplier_successful">Supplier deleted</string>
    <string name="editor_delete_supplier_failed">Error with deleting supplier</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_products">Delete all products</string>
    <string name="action_delete_all_suppliers">Delete all suppliers</string>
    <string name="list_delete_all_products_successful">All products deleted</string>
    <string name="list_delete_all_products_failed">Error with deleting all products</string>
    <string name="list_delete_all_suppliers_successful">All suppliers deleted</string>
    <string name="list_delete_all_suppliers_failed">Error with deleting all suppliers</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="db_update_failed">Failed to save product info into database</string>
    <string name="product_sold_successfully">1 product sold</string>
    <string name="action_open_supplier_list">Open supplier list</string>

    <string name="valid_enter_name_product">Enter name of the product.\u0020</string>
    <string name="valid_price_invalid">Price is invalid.\u0020</string>
    <string name="valid_unit_invalid">Unit is invalid.\u0020</string>
    <string name="valid_quantity_invalid">Quantity is invalid.\u0020</string>
    <string name="valid_enter_name_supplier">Enter name of the supplier.\u0020</string>
    <string name="valid_email">Enter valid email address of the supplier.\u0020</string>

    <string name="email_send_by">Send email by...</string>
    <string name="email_subject">Product order</string>
    <string name="email_title1">Dear\u0020</string>
    <string name="email_title_mark">,</string>
    <string name="email_body">Hereby I order the following product:</string>

    <string name="delete_supplier_impossible">Supplier can not be deleted because it is in use.</string>
    <string name="delete_all_supplier_impossible">All suppliers can not be deleted because some of them is in use.</string>

    <string name="sale_button">Sale</string>
    <string name="supplier_input_options">Choose an existing supplier, or add a new supplier</string>
    <string name="add_new_supplier">Add new supplier</string>
    <string name="supplier_address">Address</string>
    <string name="currency">Currency</string>
    <string name="product_sample_description">ie. gold, charger included</string>
    <string name="decrease_quantity_on_stock">Decrease quantity on stock</string>
    <string name="product_description">Description</string>
    <string name="supplier_email">Email</string>
    <string name="general_data">General data</string>
    <string name="increase_quantity_on_stock">Increase quantity on stock</string>
    <string name="product_name">Name</string>
    <string name="order_from_existing_supplier">Order from existing supplier</string>
    <string name="supplier_phone">Phone</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="price">Price</string>
    <string name="quantity_available">Quantity available</string>
    <string name="quantity_information">Quantity information</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_data">Supplier data</string>
    <string name="unit">Unit</string>
    <string name="product_sample_name">ie. Huawei P9 Lite phone</string>
    <string name="address_of_supplier">Address of supplier</string>
    <string name="email_address_of_supplier">Email address of supplier</string>
    <string name="name_of_supplier">Name of supplier</string>
    <string name="supplier_name">Name</string>
    <string name="phone_number_of_supplier">Phone number of supplier</string>

</resources>
